--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -21,7 +21,10 @@ function buildToc(headings: TableOfContent[]) {
 		if (heading.depth === 1 || heading.depth === 2) {
 			toc.push(heading)
 		} else {
-			parentHeadings.get(heading.depth - 1).subheadings.push(heading)
+			const parent = parentHeadings.get(heading.depth - 1)
+			if (parent) {
+				parent.subheadings.push(heading)
+			}
 		}
 	})
 	return toc
