--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,12 @@ const { title, description, image, articleDate } = Astro.props
 <html lang='en' class='scroll-smooth'>
 	<head>
 		<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
+		<link
+			rel='stylesheet'
+			href='https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css'
+			integrity='sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV'
+			crossorigin='anonymous'
+		/>
 		<ProviderTheme />
 		<ProviderAnimations />
 	</head>
